add: script to run nodemon

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "backend-express-ts",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Samy Senani <samy.senani@deepor.ai>",
+  "author": "senanisammy@gmail.com",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon --config nodemon.json src/app.ts"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
