add: send email add: confirmation account (email) add: reset password (email) add: forgot password (email) add: verification account route

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --config nodemon.json src/app.ts"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "cors": "^2.8.5",
