--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nanoid": "^3.1.30",
     "pino": "^7.6.0",
     "pino-pretty": "^7.3.0",
+    "xss-clean": "^0.1.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
