--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.2",
+    "multer": "^1.4.4",
     "nanoid": "^3.1.30",
+    "path": "^0.12.7",
     "pino": "^7.6.0",
     "pino-pretty": "^7.3.0",
     "xss-clean": "^0.1.1",
