--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "path": "^0.12.7",
     "pino": "^7.6.0",
     "pino-pretty": "^7.3.0",
+    "redis": "^4.0.2",
     "xss-clean": "^0.1.1",
     "yup": "^0.32.11"
   },
